--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,6 +21,8 @@
     "@types/react": "^16.4.1",
     "@types/react-dom": "^16.0.6",
     "@types/react-router-dom": "^4.2.7",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.3",
     "typescript": "^2.9.2"
   }
 }
