--- a/my-app/.gitignore
+++ b/my-app/.gitignore
@@ -19,3 +19,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Remove all CSS files from the source control, Scss will create this
+src/**/*.css
