--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,16 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-bootstrap": "^0.32.11",
     "axios": "^0.18.0",
+    "bootstrap": "3",
+    "concurrently": "^3.6.1",
+    "node-sass-chokidar": "^1.3.3",
     "react": "^16.4.1",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts-ts": "2.16.0"
+    "react-scripts-ts": "2.16.0",
+    "yarn-run-all": "^3.1.1"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "yarn build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "start-ts": "react-scripts-ts start",
+    "start": "concurrently \"yarn watch-css\" \"yarn start-ts\"",
+    "build-js": "react-scripts build",
+    "build": "concurrently build-css build-js",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "s": "yarn start"
