--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/react-bootstrap": "^0.32.11",
+    "@types/redux": "^3.6.0",
     "axios": "^0.18.0",
     "bootstrap": "3",
     "concurrently": "^3.6.1",
@@ -11,9 +12,12 @@
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.16.0",
+    "redux": "3.7.2",
+    "redux-devtools-extension": "^2.13.5",
     "yarn-run-all": "^3.1.1"
   },
   "scripts": {
